--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -45,7 +45,7 @@ body {
 
 /* Public pages fixed navigation fallback */
 html {
-  scroll-padding-top: 80px;
+  scroll-padding-top: 120px;
 }
 
 .landing > .nav,
